--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -431,11 +431,12 @@ Heavy-tailed distributions appear in many fields of science such as insurance an
 
 Analyzing the tail is challenging since using classical methods, such as empirical quantiles, it is impossible to extrapolate beyond the available data. This motivates the use of Extreme Value Theory (EVT), that provides a rigorous mathematical framework to study extremes. EVT characterizes the behavior of the distribution's tail and tail estimation is often of high practical importance.
 
-One of the possible estimators for extreme value index is the Hill estimator, which was introduced by Bruce Hill in 1975 \cite{hill}. To this day it remains to be one of the most used estimators for $\gamma>0$. Reason for its popularity might be that it is simple to calculate and its asymptotic and finite sample properties are well known.
+One of the possible estimators for extreme value index is the Hill estimator, which was introduced by Bruce Hill in 1975 \cite{hill} and remains one of the most used tail estimators for heavy-tailed distributions.
+In this article we will review asymptotic properties of the Hill estimator and particularly its consistency.
 
-In this article we will study asymptotic properties of the Hill estimator and particularly its consistency. By consistency we mean convergence in probability. We will show that regularly varying functions form the mathematical foundation for the heavy tailed distributions. Consequently regularly varying functions play an important role in the proof of the Hill estimator. Thus in addition to consistency of Hill estimator we will provide pedantic proofs for properties of the regularly varying functions. We also examine consistency of the Hill estimator with Monte Carlo simulations from Pareto and Cauchy distributions. Results for asymptotic normality of the Hill estimator are provided but further scrutiny of the conditions is not in the scope of this paper.
+Regularly varying functions form the mathematical foundation for the heavy-tailed distributions and consequently they play an important role in the theory of the Hill estimator. We carefully review their properties in addition to consistency of the Hill estimator. We also examine consistency of the Hill estimator by performing Monte Carlo simulations. Results for asymptotic normality of the Hill estimator are provided but won’t be discussed in detail.
 
-The rest of the article is composed as follows. Section \ref{backround} gives requisites for the proofs and theory of the Hill estimator including properties of heavy tailed functions. Section \ref{hillEst} represents the main result, which is consistency and necessary lemmas for the proof of the consistency. Simulations are presented in section \ref{simut} and section \ref{conclusion} gives conclusion and last remarks. Lastly, all the proofs and figures are found in Appendixes \ref{proofs} and \ref{figures}.
+The rest of the article is organized as follows. Section \ref{backround} gives requisites for the proofs and theory of the Hill estimator including properties of heavy tailed functions. Section \ref{hillEst} represents the main result, which is consistency and necessary lemmas for the proof of the consistency. Simulations are presented in Section \ref{simut} and concluding remarks are given in Section \ref{conclusion}. Lastly, all the proofs and figures are found in Appendixes \ref{proofs} and \ref{figures}.
 
 %\begin{definition}
 %\begin{equation*}
